--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <button id="tool-fill" class="tool-btn" title="Paint Bucket">🪣</button>
                     <button id="tool-eraser" class="tool-btn" title="Eraser">🧽</button>
                     <button id="tool-undo" class="tool-btn" title="Undo">↩️</button>
-                    <input type="color" id="color-picker" value="#000000">
+                    <input type="color" id="color-picker" value="#ffffff">
                     <input type="range" id="brush-size" min="1" max="20" value="5">
                 </div>
                 <div class="tool-group">
