--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <div class="game-header">
                 <div class="stat">Word: <span id="word-hint">_ _ _</span></div>
                 <div class="stat">Time: <span id="timer">60</span>s</div>
+                <div class="stat">Draw: <span id="progress">0/8</span></div>
                 <div class="stat">Score: <span id="current-score">0</span></div>
             </div>
             <div class="canvas-container">
