--- a/index.html
+++ b/index.html
@@ -38,9 +38,16 @@
                 <div class="stat">Time: <span id="timer">60</span>s</div>
                 <div class="stat">Draw: <span id="progress">0/8</span></div>
                 <div class="stat">Score: <span id="current-score">0</span></div>
+                <button id="pause-game" class="tool-btn" title="Pause">⏸️</button>
             </div>
             <div class="canvas-container">
                 <canvas id="drawing-canvas"></canvas>
+                <div id="pause-overlay" class="overlay">
+                    <div class="overlay-content">
+                        <h2>Game Paused</h2>
+                        <button id="resume-game" class="btn-primary">Resume</button>
+                    </div>
+                </div>
             </div>
             <div class="game-toolbar">
                 <div class="tool-group">
